--- a/01_agama/madhyama/MA_002.md
+++ b/01_agama/madhyama/MA_002.md
@@ -10,77 +10,79 @@ next: MA_003.html
 ## Chapter 1: Sevens
 ### 2. The Pārijāta Tree
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
 {: #p1}
 
 #### The Seasons of the Pārijāta Tree
 
-2\. It was then that the Bhagavān addressed the monks, “If the leaves of the Trāyastriṃśa Heaven’s pārijāta tree  wither and yellow, then the Trāyastriṃśa gods  are delighted and rejoice.[\[2\]](#n2){:#ref2} It won’t be long before the pārijāta tree’s leaves will fall.
+2\. It was then that the Bhagavān addressed the monks, “When the leaves of the Trāyastriṃśa Heaven’s pārijāta tree[\[2\]](#n2){:#ref2} wither and yellow, the Trāyastriṃśa gods[\[3\]](#n3){:#ref3} are delighted and rejoice, for it won’t be long before the pārijāta tree’s leaves will fall.
 {: #p2}
 
-3\. “Furthermore, once the leaves of the Trāyastriṃśa Heaven’s pārijāta tree have fallen, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the pārijāta tree’s leaves will grow back.
+3\. “Furthermore, once the leaves of the Trāyastriṃśa Heaven’s pārijāta tree have fallen, the Trāyastriṃśa gods are delighted and rejoice, for it won’t be long before the pārijāta tree’s leaves will grow back.
 {: #p3}
 
-4\. “Furthermore, once the leaves of the Trāyastriṃśa Heaven’s pārijāta tree have grown back, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the pārijāta tree grows webs [of buds].[\[3\]](#n3){:#ref3}
+4\. “Furthermore, once the leaves of the Trāyastriṃśa Heaven’s pārijāta tree have grown back, the Trāyastriṃśa gods are delighted and rejoice, for it won’t be long before the pārijāta tree will grow a web [of buds].[\[4\]](#n4){:#ref4}
 {: #p4}
 
-5\. “Furthermore, once the Trāyastriṃśa Heaven’s pārijāta tree has grown webs, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the pārijāta tree’s [buds] grow like bird beaks.[\[4\]](#n4){:#ref4}
+5\. “Furthermore, once the Trāyastriṃśa Heaven’s pārijāta tree has grown a web, the Trāyastriṃśa gods are delighted and rejoice, for it won’t be long before the pārijāta tree’s [buds] will grow like bird beaks.[\[5\]](#n5){:#ref5}
 {: #p5}
 
-6\. [422b] “Furthermore, once the Trāyastriṃśa Heaven’s pārijāta tree has grown [buds] like bird beaks, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the pārijāta tree’s [buds] will open like bowls.
+6\. [422b] “Furthermore, once the Trāyastriṃśa Heaven’s pārijāta tree has grown [buds] like bird beaks, the Trāyastriṃśa gods are delighted and rejoice, for it won’t be long before the pārijāta tree’s [buds] will open like bowls.
 {: #p6}
 
-7\. “Furthermore, once the [buds] of Trāyastriṃśa Heaven’s pārijāta tree have opened like bowls, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the pārijāta tree will be in full bloom.
+7\. “Furthermore, once the [buds] of the Trāyastriṃśa Heaven’s pārijāta tree have opened like bowls, the Trāyastriṃśa gods are delighted and rejoice, for it won’t be long before the pārijāta tree will be in full bloom.
 {: #p7}
 
-8\. “Once the pārijāta tree has fully bloomed, the light that it shines, the color that it reflects, and the fragrance that it produces have a range of a hundred leagues.[\[5\]](#n5){:#ref5} During the fourth month of summer,[\[6\]](#n8){: #ref8} the Trāyastriṃśa gods then entertain themselves with the five heavenly pleasures and the virtues with which they’re endowed. This is called the festival under the Trāyastriṃśa Heaven’s pārijāta tree.
+8\. “When the pārijāta tree is in full bloom, the light that it shines, the color that it reflects, and the fragrance that it produces have a range of a hundred leagues.[\[6\]](#n6){:#ref6} During the fourth month of summer,[\[7\]](#n7){: #ref7} the Trāyastriṃśa gods entertain themselves with the five heavenly pleasures and the virtues with which they’re endowed. This is called the festival under the Trāyastriṃśa Heaven’s pārijāta tree.
 {: #p8}
 
 #### The Seasons of the Noble Disciple
 
-9\. “This meaning is also the case for the noble disciple. When he considers leaving home, then the disciple is called ‘leaves turning yellow.’ He’s like the withering and yellowing leaves of the Trāyastriṃśa Heaven’s pārijāta tree.
+9\. “Such is the meaning of the noble disciple, too. When he considers leaving home, the disciple is called ‘leaves yellowing.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree when its leaves wither and yellow.
 {: #p9}
 
-10\. “Furthermore, when he shaves off his beard and hair, puts on reddish-brown robes, becomes faithful, leaves home, goes homeless, and trains on the path, the noble disciple then is called ‘falling leaves.’ He’s like the leaves falling from the Trāyastriṃśa Heaven’s pārijāta tree.
+10\. “Furthermore, when he shaves off their hair, puts on the reddish-brown robes, attains faith, leaves home, goes homeless, and trains on the path, the noble disciple is called ‘dropping leaves.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree dropping its leaves.
 {: #p10}
 
-11\. “Furthermore, he parts with desire and parts with bad and unwholesome things.[\[7\]](#n6){:#ref6} With perception and contemplation, this seclusion produces joy and happiness, and he attains the accomplishment of the first meditation. The noble disciple then is called ‘leaves growing back.’ He’s like the leaves growing back on the Trāyastriṃśa Heaven’s pārijāta tree.
+11\. “Furthermore, the noble disciple parts with desire and bad and unskillful things.[\[8\]](#n8){:#ref8} With perception and contemplation,[\[9\]](#n9){:#ref9} this seclusion produces joy and happiness, and he attains accomplishment of the first dhyāna.[\[10\]](#n10){:#ref10} The noble disciple then is called ‘growing back leaves.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing back its leaves.
 {: #p11}
 
-12\. “Furthermore, once perception and contemplation have stopped, the noble disciple possesses an inner stillness and unified mind. Without perception or contemplation, this concentration produces joy and happiness, and he attains the accomplishment of the second meditation. The noble disciple then is called ‘growing webs [of buds].’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing webs [of buds].
+12\. “Furthermore, once perception and contemplation have stopped, the noble disciple has an inner stillness and unified mind. Without perception or contemplation, this concentration produces joy and happiness, and he attains accomplishment of the second dhyāna. The noble disciple then is called ‘growing webs [of buds].’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing webs [of buds].
 {: #p12}
 
-13\. “Furthermore, the noble disciple parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness, which is described by the noble ones as the noble’s equanimity, mindfulness, happy abiding, and emptiness.[\[8\]](#n7){:#ref7} He attains the accomplishment of the third meditation. The noble disciple then is called ‘growing [buds] like bird beaks.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing [buds] like bird beaks.
+13\. “Furthermore, the noble disciple parts with joy and desire, and he arrives at equanimity and pursues nothing. With right mindfulness and right knowledge, he personally experiences the happiness which is described by nobles as noble equanimity, mindfulness, happy abiding, and emptiness,[\[11\]](#n11){:#ref11} and he attains accomplishment of the third dhyāna. The noble disciple then is called ‘growing [buds] like bird beaks.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing [buds] like bird beaks.
 {: #p13}
 
-14\. “Furthermore, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he attains the accomplishment of the fourth meditation. The noble disciple then is called ‘becoming like a bowl.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree [buds] becoming like bowls.
+14\. “Furthermore, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he’s neither discomforted nor delighted. Equanimous, mindful, and pure, he attains accomplishment of the fourth dhyāna. The noble disciple then is called ‘growing like a bowl.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree [buds growing] like bowls.
 {: #p14}
 
-15\. “Furthermore, once the noble disciple’s contaminants have ended, his mind is liberated, and his wisdom is liberated. In the present life, he knows and recognizes for himself the accomplishment of self-realization: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished.’ He is no longer subject to existence and knows it as it really is. The noble disciple then is called ‘in full bloom.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree in full bloom.
+15\. “Furthermore, once the noble disciple’s contaminants have ended, his mind is liberated, and his wisdom is liberated. In the present life, he knows and recognizes for himself the accomplishment of this realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I know as it really is that I’m no longer subject to existence.’ The noble disciple then is called ‘in full bloom.’ They’re like the Trāyastriṃśa Heaven’s pārijāta tree in full bloom.
 {: #p15}
 
 #### Conclusion
 
-16\. “He is an arhat monk whose contaminants have ended. The Trāyastriṃśa gods assemble in the Sudharmā Assembly Hall, sigh admiringly, and praise him, ‘Some worthy disciple at some town [422c] shaved off his beard and hair, put on reddish-brown robes, became faithful, left home, went homeless, and trained on the path. Once his contaminants had ended, his mind was liberated, and his wisdom was liberated. In the present life, he knew and recognized for himself the accomplishment of self-realization: “Birth has been ended, the religious practice has been established, and the task has been accomplished.” He is no longer subject to existence and knows it as it really is.’
+16\. “He becomes an arhat monk whose contaminants are ended. The Trāyastriṃśa gods assemble in the Sudharmā Meeting Hall, sigh admiringly, and praise him, ‘Some worthy disciple at some town [422c] shaved off his hair, put on the reddish-brown robes, became faithful, left home, went homeless, and trained on the path. Once his contaminants had ended, his mind was liberated, and his wisdom was liberated. In the present life, he knows and recognizes for himself the accomplishment of this realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I know as it really is that I’m no longer subject to existence.’
 {: #p16}
 
 17\. “This is called the assembly that coincides with the end of an arhat’s contaminants, which is like the festival held under the Trāyastriṃśa Heaven’s pārijāta tree.”
 {: #p17}
 
-18\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
+18\. Thus did the Buddha speak. Those monks who heard what the Buddha taught rejoiced and approved.
 {: #p18}
 
 ### Notes
 
 1. {:#n1} Parallels include [AN 7.69](https://suttacentral.net/an7.69){: target="_blank"}, [EA 39.2](https://suttacentral.net/ea39.2){: target="_blank"}, and [T28](https://suttacentral.net/T28){: target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} *Trāyastriṃśa Heaven*. The Chinese translates trāyastriṃśa literally as Heaven of Thirty-Three. This was the heaven of the Vedic gods ruled by Indra.  
-*pārijāta*. The Chinese seems to be an abbreviated transliteration ‘jata,’ but presumably the full Sanskrit name would have been pārijāta(ka) (P. pāricchattaka). It's the present day name for *Nyctanthes arbor-tristis*, commonly called the night-flowering jasmine tree in English. The heavenly tree may have been imagined to resemble this South Asian tree, but it was described as being enormous in the Trāyastriṃśa Heaven, taking up the space of an entire grove. [\[back\]](#ref2)
-3. {:#n3} Pali: *Na cirass’eva dāni jālakajāto bhavissati*. Bhikkhu Bodhi reports that the Manorathapūraṇī commentary says: “The occasion when the tree gives birth to webs of leaves and flower, which come forth together.” The Chinese term can also be understood as “web,” describing the overall appearance of a budding tree. [\[back\]](#ref3)
-4. {:#n4} Pali: *Na cirass’eva dani kharakajato bhavissati*. Bhikkhu Bodhi translates the commentary as: “The occasion when it becomes possessed of a web of leaves and of flowers well divided and growing separately.” The Chinese literally means "bird's beak;" presumably, it refers to the shape of the buds as they develop. [\[back\]](#ref4)
-5. {:#n5} *hundred leagues*. The Chinese transliterates yojana, an Indic measure of distance roughly equivalent to a league. Traditional accounts of a yojana range from 7 to 9 miles. [\[back\]](#ref5)
-6. {:#n8} *fourth month of summer*. This would be the month of Skt. Āṣāḍha on the Indian lunar calendar, which coincides with late June/early July on the Gregorian calendar. The rainy season retreat began during this month among Buddhists and other wandering ascetics, and Āṣāḍha was a time of seasonal festivals and religious observances across ancient India.[\[back\]](#ref8)
-7. {:#n6} *bad and unwholesome things*. Elsewhere in MĀ, this general expression is glossed as a catchall for the three poisons and other emotional and behavioral things that reinforce rather than overcome the root of ignorance. [\[back\]](#ref6)
-8. {:#n7} *emptiness*. The addition of a fourth item to this traditional formula is unique to MĀ. The older editions before the Taisho have varying readings (“emptiness,” “dwelling,” and “concentration”) that are visually similar in Chinese. The Taisho editors corrected some of these passages to read “dwelling” but not all of them. The CBETA edition corrected all the passages to read “emptiness,” which is the reading that I’ve followed. The reader should be aware that this last item doesn’t occur in other sources and may well be a spurious addition. [\[back\]](#ref7)
+2. *pārijāta*. {:#n2} The Chinese seems to be an abbreviated transliteration ‘jata,’ but presumably the full Sanskrit name would have been pārijāta(ka) (P. pāricchattaka). It’s a present-day name for *Nyctanthes arbor-tristis*, commonly called the night-flowering jasmine tree in English. The heavenly tree may have been imagined to resemble this South Asian tree, but it was described as being enormous in the Trāyastriṃśa Heaven, taking up the space of an entire grove. [\[back\]](#ref2)
+3. {:#n3} *Trāyastriṃśa Heaven*. The Chinese translates trāyastriṃśa literally as Heaven of the Thirty-Three. This was the heaven of the Vedic gods ruled by Indra. [\[back\]](#ref3)
+4. {:#n4} The Pali parallel reads *Na cirass’eva dāni jālakajāto bhavissati*. Bhikkhu Bodhi reports that the Manorathapūraṇī commentary says: “The occasion when the tree gives birth to webs of leaves and flower, which come forth together.” The Chinese term can also be understood as “web,” describing the overall appearance of a budding tree. [\[back\]](#ref4)
+5. {:#n5} Pali: *Na cirass’eva dani kharakajato bhavissati*. Bhikkhu Bodhi translates the commentary as: “The occasion when it becomes possessed of a web of leaves and of flowers well divided and growing separately.” The Chinese literally means “bird's beak;” presumably, it refers to the shape of the buds as they develop. [\[back\]](#ref5)
+6. {:#n6} *hundred leagues*. The Chinese transliterates yojana, an Indic measure of distance roughly equivalent to a league. Traditional accounts of a yojana’s length range from 7 to 9 miles. [\[back\]](#ref6)
+7. {:#n7} *fourth month of summer*. This would be the month of Skt. Āṣāḍha on the Indian lunar calendar, which coincides with late June/early July on the Gregorian calendar. The rainy season retreat began during this month among Buddhists and other wandering ascetics, and Āṣāḍha was a time of seasonal festivals and religious observances across ancient India.[\[back\]](#ref7)
+8. {:#n8} *bad and unwholesome things*. Elsewhere in MĀ, this expression is glossed as the three poisons, five hindrances, and other emotional and behavioral things that reinforce rather than overcome the root of ignorance. Cf. T26.577b26, 599a07, 805c26. [\[back\]](#ref8)
+9. {:#n9} *perception and contemplation*. MĀ translates vitarka and vicāra as 覺 and 觀, which seem to represent outward and inward mental activity in general. I read 覺 in the sense of “awareness/wakefulness” and 觀 in the sense of “introspection/contemplation.” It should be noted that these are very general psychological terms in classical Chinese that are not limited to verbal or conceptual thought.[\[back\]](#ref9)
+10. {:#n10} *dhyāna*. Despite my general policy of translate Indic and Chinese terms that aren't proper nouns and names, I’ve decided to adopt dhyāna as a loanword for a lack of English equivalents. Dhyāna were a particular type of meditative state in which the mind is gradually calmed into a stillness of activity without any focus point or subject of contemplation. Other translators have rendered it as “trance” and “absorption.” [\[back\]](#ref10)
+11. {:#n11} *emptiness*. The addition of a fourth item to this traditional formula is unique to MĀ. The older editions before the Taisho have varying readings for this item elsewhere in MĀ (“emptiness,” “dwelling,” and “concentration”) that are visually similar in Chinese. The Taisho editors corrected some of these passages to read “dwelling” but not all of them. The CBETA edition corrected all the passages to read “emptiness,” which is the reading that I’ve followed. The reader should be aware that this last item doesn’t occur in other sources and may well be a spurious addition. [\[back\]](#ref7)
 
 ---
 
