--- a/01_agama/dirgha/DA_28.md
+++ b/01_agama/dirgha/DA_28.md
@@ -384,9 +384,9 @@ The Buddha told the wanderer, “If someone of a different training wants to lea
 
 ### Notes
 
-1. {:#n1} The direct parallel for this sutra is [DN 9](https://suttacentral.net/dn9). [\[back\]](#ref1)
-2. {:#n2}*[Poṭṭhapāda]*. Ch. 布吒婆樓, MCh. po-ṭă-bua-ləu = \*Potava(r/l)u. P. Poṭṭhapāda. Lacking a Sanskrit attestation, I’ve substituted the Pali equivalent.
-3. {:#n3}*Hastikaśīrṣa Śāriputra*. Ch. 象首舍利弗. P. Hatthisāriputta. The Chinese translates the first part of his name as “elephant chief (or head),” which would match Skt. Hastikaśīrṣa, and then adds the common transliteration of Śāriputra. I’ve combined the two to arrive at Skt. Hastikaśīrṣa Śāriputra.
+1. {:#n1}The direct parallel for this sutra is [DN 9](https://suttacentral.net/dn9). [\[back\]](#ref1)
+2. {:#n2}*[Poṭṭhapāda]*. Ch. 布吒婆樓, MCh. po-ṭă-bua-ləu = \*Potava(r/l)u. P. Poṭṭhapāda. Lacking a Sanskrit attestation, I’ve substituted the Pali equivalent. [\[back\]](#ref2)
+3. {:#n3}*Hastikaśīrṣa Śāriputra*. Ch. 象首舍利弗. P. Hatthisāriputta. The Chinese translates the first part of his name as “elephant chief (or head),” which would match Skt. Hastikaśīrṣa, and then adds the common transliteration of Śāriputra. I’ve combined the two to arrive at Skt. Hastikaśīrṣa Śāriputra. [\[back\]](#ref3)
 
 ---
 
